# yarp-devices-ros2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  r1_minimal.world  yarp-ros2_entrypoint.sh  yarprobotinterface.ini
ros2_components_ws/src/cb_hw_fw_pos/: CMakeLists.txt  cb_hw_fw_pos.xml  package.xml
ros2_components_ws/src/joint_states_client/: CMakeLists.txt  package.xml
ros2_interfaces_ws/src/simulated_world_nws_ros2_msgs/: CMakeLists.txt  package.xml
src/bridges/sound_bridge/: CMakeLists.txt  package.xml  yarp_to_ros2_sound_bridge.cpp
src/devices/: CMakeLists.txt
src/devices/Ros2ConversionUtils/: CMakeLists.txt  Ros2ConversionUtils.cpp  Ros2ConversionUtils.h  ros2PixelCode.h
src/devices/audioRecorder_nws_ros2/: AudioRecorder_nws_ros2.cpp  AudioRecorder_nws_ros2.h  AudioRecorder_nws_ros2_ParamsParser.cpp  AudioRecorder_nws_ros2_ParamsParser.h  AudioRecorder_nws_ros2_params.md  CMakeLists.txt
src/devices/battery_nws_ros2/: Battery_nws_ros2.cpp  Battery_nws_ros2.h  Battery_nws_ros2_ParamsParser.cpp  Battery_nws_ros2_ParamsParser.h  Battery_nws_ros2_params.md  CMakeLists.txt
src/devices/controlBoard_iFaceTransLayer_ros2/: CMakeLists.txt  ControlBoard_iFaceTransLayer_ros2.cpp  ControlBoard_iFaceTransLayer_ros2.h
src/devices/controlBoard_nws_ros2/: CMakeLists.txt  ControlBoard_nws_ros2.cpp  ControlBoard_nws_ros2.h  ControlBoard_nws_ros2_ParamsParser.cpp  ControlBoard_nws_ros2_ParamsParser.h  ControlBoard_nws_ros2_callbacks.cpp  ControlBoard_nws_ros2_params.md
src/devices/frameGrabber_nws_ros2/: CMakeLists.txt  FrameGrabber_nws_ros2.cpp  FrameGrabber_nws_ros2.h  FrameGrabber_nws_ros2_ParamsParser.cpp  FrameGrabber_nws_ros2_ParamsParser.h  FrameGrabber_nws_ros2_params.md  frameGrabber_nws_ros2.cpp  frameGrabber_nws_ros2.h
src/devices/frameTransformGet_nwc_ros2/: CMakeLists.txt  FrameTransformGet_nwc_ros2_ParamsParser.cpp  FrameTransformGet_nwc_ros2_ParamsParser.h  FrameTransformGet_nwc_ros2_params.md  frameTransformGet_nwc_ros2.cpp  frameTransformGet_nwc_ros2.h
src/devices/frameTransformSet_nwc_ros2/: CMakeLists.txt  FrameTransformSet_nwc_ros2_ParamsParser.cpp  FrameTransformSet_nwc_ros2_ParamsParser.h  FrameTransformSet_nwc_ros2_params.md  frameTransformSet_nwc_ros2.cpp  frameTransformSet_nwc_ros2.h
src/devices/frameTransformUtils/: CMakeLists.txt  FrameTransformContainer.cpp  FrameTransformContainer.h
src/devices/hapticDevice_nws_ros2/: CMakeLists.txt  HapticDevice_nws_ros2.cpp  HapticDevice_nws_ros2.h  HapticDevice_nws_ros2_ParamsParser.cpp  HapticDevice_nws_ros2_ParamsParser.h  HapticDevice_nws_ros2_params.md
src/devices/localization2D_nws_ros2/: CMakeLists.txt  Localization2D_nws_ros2.cpp  Localization2D_nws_ros2.h  Localization2D_nws_ros2_ParamsParser.cpp  Localization2D_nws_ros2_ParamsParser.h  Localization2D_nws_ros2_params.md  localization2D_nws_ros2.cpp  localization2D_nws_ros2.h
src/devices/map2D_nws_ros2/: CMakeLists.txt  Map2D_nws_ros2.cpp  Map2D_nws_ros2.h  Map2D_nws_ros2_ParamsParser.cpp  Map2D_nws_ros2_ParamsParser.h  Map2D_nws_ros2_params.md  map2D_nws_ros2.cpp  map2D_nws_ros2.h
src/devices/mobileBaseVelocityControl_nws_ros2/: CMakeLists.txt  MobileBaseVelocityControl_nws_ros2.cpp  MobileBaseVelocityControl_nws_ros2.h  MobileBaseVelocityControl_nws_ros2_ParamsParser.cpp  MobileBaseVelocityControl_nws_ros2_ParamsParser.h  MobileBaseVelocityControl_nws_ros2_params.md
src/devices/multipleAnalogSensors_nwc_ros2/: CMakeLists.txt  GenericSensor_nwc_ros2.h  GenericSensor_nwc_ros2_ParamsParser.cpp  GenericSensor_nwc_ros2_ParamsParser.h  GenericSensor_nwc_ros2_params.md  Imu_nwc_ros2.cpp  Imu_nwc_ros2.h
src/devices/multipleAnalogSensors_nws_ros2/: CMakeLists.txt  GenericSensor_nws_ros2.h  GenericSensor_nws_ros2_ParamsParser.cpp  GenericSensor_nws_ros2_ParamsParser.h  GenericSensor_nws_ros2_params.md  Imu_nws_ros2.cpp  Imu_nws_ros2.h  WrenchStamped_nws_ros2.cpp  WrenchStamped_nws_ros2.h
src/devices/odometry2D_nws_ros2/: CMakeLists.txt  Odometry2D_nws_ros2.cpp  Odometry2D_nws_ros2.h  Odometry2D_nws_ros2_ParamsParser.cpp  Odometry2D_nws_ros2_ParamsParser.h  Odometry2D_nws_ros2_params.md
src/devices/rangefinder2D_controlBoard_nws_ros2/: CMakeLists.txt  Rangefinder2D_controlBoard_nws_ros2.cpp  Rangefinder2D_controlBoard_nws_ros2.h  Rangefinder2D_controlBoard_nws_ros2_ParamsParser.cpp  Rangefinder2D_controlBoard_nws_ros2_ParamsParser.h  Rangefinder2D_controlBoard_nws_ros2_params.md
src/devices/rangefinder2D_nwc_ros2/: CMakeLists.txt  Rangefinder2D_nwc_ros2.cpp  Rangefinder2D_nwc_ros2.h  Rangefinder2D_nwc_ros2_ParamsParser.cpp  Rangefinder2D_nwc_ros2_ParamsParser.h  Rangefinder2D_nwc_ros2_params.md
src/devices/rangefinder2D_nws_ros2/: CMakeLists.txt  Rangefinder2D_nws_ros2.cpp  Rangefinder2D_nws_ros2.h  Rangefinder2D_nws_ros2_ParamsParser.cpp  Rangefinder2D_nws_ros2_ParamsParser.h  Rangefinder2D_nws_ros2_params.md  rangefinder2D_nws_ros2.cpp
src/devices/rgbdSensor_nwc_ros2/: CMakeLists.txt  RgbdSensor_nwc_ros2.cpp  RgbdSensor_nwc_ros2.h  RgbdSensor_nwc_ros2_ParamsParser.cpp  RgbdSensor_nwc_ros2_ParamsParser.h  RgbdSensor_nwc_ros2_params.md
src/devices/rgbdSensor_nws_ros2/: CMakeLists.txt  RgbdSensor_nws_ros2.cpp  RgbdSensor_nws_ros2.h  RgbdSensor_nws_ros2_ParamsParser.cpp  RgbdSensor_nws_ros2_ParamsParser.h  RgbdSensor_nws_ros2_params.md  rgbdSensor_nws_ros2.cpp  rgbdSensor_nws_ros2.h
src/devices/rgbdToPointCloudSensor_nws_ros2/: CMakeLists.txt  RgbdToPointCloudSensor_nws_ros2.cpp  RgbdToPointCloudSensor_nws_ros2.h  RgbdToPointCloudSensor_nws_ros2_ParamsParser.cpp  RgbdToPointCloudSensor_nws_ros2_ParamsParser.h  RgbdToPointCloudSensor_nws_ros2_params.md
src/devices/ros2PublishTest/: CMakeLists.txt  Ros2PublishTest.cpp  Ros2PublishTest.h  aaa.xml
src/devices/ros2RGBDConversionUtils/: CMakeLists.txt  Ros2RGBDConversionUtils.cpp  Ros2RGBDConversionUtils.h  ros2PixelCode.cpp  ros2PixelCode.h
src/devices/ros2SubscriptionTest/: CMakeLists.txt  Ros2SubscriptionTest.cpp  Ros2SubscriptionTest.h
src/devices/ros2Utils/: CMakeLists.txt  Ros2Spinner.cpp  Ros2Spinner.h  Ros2Subscriber.cpp  (+3 more)
(+135 files in other folders)
