# Copyright (C) 2006-2020 Istituto Italiano di Tecnologia (IIT)
# All rights reserved.
#
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license. See the accompanying LICENSE file for details.

add_subdirectory(ros2test)
add_subdirectory(rangefinder2D_nws_ros2)
add_subdirectory(rgbdSensor_nws_ros2)
