# SPDX-FileCopyrightText: 2023 Istituto Italiano di Tecnologia (IIT)
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(ros2test)
add_subdirectory(ros2Utils)
add_subdirectory(rangefinder2D_nws_ros2)
add_subdirectory(rangefinder2D_nwc_ros2)
add_subdirectory(rgbdSensor_nws_ros2)
add_subdirectory(localization2D_nws_ros2)
add_subdirectory(controlBoard_nws_ros2)
add_subdirectory(map2D_nws_ros2)
add_subdirectory(frameGrabber_nws_ros2)
add_subdirectory(rgbdToPointCloudSensor_nws_ros2)
add_subdirectory(mobileBaseVelocityControl_nws_ros2)
add_subdirectory(odometry2D_nws_ros2)
add_subdirectory(frameTransformSet_nwc_ros2)
add_subdirectory(frameTransformGet_nwc_ros2)
add_subdirectory(ros2RGBDConversionUtils)
add_subdirectory(rgbdSensor_nwc_ros2)
add_subdirectory(multipleAnalogSensors_nws_ros2)
add_subdirectory(multipleAnalogSensors_nwc_ros2)
add_subdirectory(rangefinder2D_controlBoard_nws_ros2)
add_subdirectory(battery_nws_ros2)
add_subdirectory(audioRecorder_nws_ros2)